Add an additional Glider.js library
Add an additional Glider.js library:
- lib/glider.min.js
- css/glider.min.css

Adding additional GliderView control

Adding of additional GliderView control element
for animated scroll of container with elements

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="css/media.css"/>
     <link rel="stylesheet" type="text/css" href="css/sdl.css"/>
     <link rel="stylesheet" type="text/css" href="css/home.css"/>
+    <link rel="stylesheet" type="text/css" href="css/glider.min.css">
 
     <!--Libs-->
 
@@ -27,7 +28,7 @@
             src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script type="text/javascript"
             src="http://www.geocodezip.com/scripts/v3_epoly.js"></script>
-
+    <script type="text/javascript" src="lib/glider.min.js"></script>
     <!-- RELEASE's min versions -->
 
     <script type="text/javascript" src="lib/jquery-1.7.2.min.js"></script>
@@ -83,6 +84,7 @@
 <script type="text/javascript" src="app/controlls/MenuList.js"></script>
 <script type="text/javascript" src="app/controlls/ScrollableText.js"></script>
 <script type="text/javascript" src="app/controlls/CodeEditor.js"></script>
+<script type="text/javascript" src="app/controlls/GliderView.js"></script>
 
 <script type="text/javascript" src="app/view/WarningView.js"></script>
 
