Add widget container
- add widget template
- add widget handling

--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@
 <script type="text/javascript"
         src="app/view/home/widgetNavigationView.js"></script>
 <script type="text/javascript" src="app/view/home/widgetPhoneView.js"></script>
+<script type="text/javascript" src="app/view/home/widgetContainerView.js"></script>
+<script type="text/javascript" src="app/view/home/widgetTemplate.js"></script>
 <!-- settings views -->
 
 <script type="text/javascript" src="app/view/settings/SeatView.js"></script>
@@ -248,6 +250,7 @@
 <script type="text/javascript" src="app/view/home/statusMediaView.js"></script>
 <script type="text/javascript" src="app/view/home/statusPhoneView.js"></script>
 <script type="text/javascript" src="app/view/home/statusInfoView.js"></script>
+<script type="text/javascript" src="app/view/home/rightView.js"></script>
 <script type="text/javascript"
         src="app/view/home/statusNavigationView.js"></script>
 <script type="text/javascript"
