--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
 <script type="text/javascript" src="app/view/sdl/ExitAppView.js"></script>
 <script type="text/javascript" src="app/view/sdl/PrimaryDevice.js"></script>
 <script type="text/javascript" src="app/view/sdl/SystemRequestView.js"></script>
+<script type="text/javascript" src="app/view/sdl/addWidgetPopUp.js"></script>
 
 
 <script type="text/javascript" src="app/StateManager.js"></script>
