Implementation of feature allow multiple modules per module type
The Changes are:

- Were added two emulation type of vehicle:
	- 2x2
	- 2x3
- Were added views to choose emulation type and configure coverage:
	- VehicleEmulationView.js
	- VehicleModuleCoverageView.js

- AudioModel object was created to agregate all media models:
	- CDModel
	- USBModel
	- BlueToothModel
	- LineInModel
	- IPodModel
	- RadioModel
- RCModulesController object was created to aggregate multiple instances of
	all RC components:
	- AudioModel
	- ClimateModel
	- SeatModel
	- RadioModel
	- HMISettingsModel
	- LightModel
- All data and RPC related to RC processed by RCModulesController:
	- Set/Get OnInteriorVehicleData
	- GetCapabilities
	- OnInteriorVehicleData

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
 <script type="text/javascript" src="app/controlls/GliderView.js"></script>
 
 <script type="text/javascript" src="app/view/WarningView.js"></script>
+<script type="text/javascript" src="app/view/VehicleEmulationView.js"></script>
+<script type="text/javascript" src="app/view/VehicleModuleCoverageView.js"></script>
 
 <script type="text/javascript"
         src="app/controlls/RadioPresetButton.js"></script>
@@ -98,16 +100,18 @@
 
 <!-- Models -->
 
-<script type="text/javascript" src="app/model/media/PlaylistItem.js"></script>
-<script type="text/javascript" src="app/model/media/MediaCDPlayer.js"></script>
-<script type="text/javascript" src="app/model/media/Playlist.js"></script>
 
-<script type="text/javascript" src="app/model/media/CDModel.js"></script>
-<script type="text/javascript" src="app/model/media/USBModel.js"></script>
-<script type="text/javascript" src="app/model/media/BluetoothModel.js"></script>
-<script type="text/javascript" src="app/model/media/LineInModel.js"></script>
-<script type="text/javascript" src="app/model/media/IPodModel.js"></script>
-<script type="text/javascript" src="app/model/media/RadioModel.js"></script>
+<script type="text/javascript" src="app/model/media/AudioModels/PlaylistItem.js"></script>
+<script type="text/javascript" src="app/model/media/AudioModels/MediaCDPlayer.js"></script>
+<script type="text/javascript" src="app/model/media/AudioModels/Playlist.js"></script>
+
+<script type="text/javascript" src="app/model/media/AudioModels/CDModel.js"></script>
+<script type="text/javascript" src="app/model/media/AudioModels/USBModel.js"></script>
+<script type="text/javascript" src="app/model/media/AudioModels/BluetoothModel.js"></script>
+<script type="text/javascript" src="app/model/media/AudioModels/LineInModel.js"></script>
+<script type="text/javascript" src="app/model/media/AudioModels/IPodModel.js"></script>
+<script type="text/javascript" src="app/model/media/AudioModels/RadioModel.js"></script>
+<script type="text/javascript" src="app/model/media/AudioModel.js"></script>
 <script type="text/javascript" src="app/model/PhoneModel.js"></script>
 <script type="text/javascript" src="app/model/NavigationModel.js"></script>
 <script type="text/javascript" src="app/model/ClimateControlModel.js"></script>
@@ -131,7 +135,8 @@
 
 <!-- Controllers -->
 
-<script type="text/javascript" src="app/controller/MediaController.js"></script>
+<script type="text/javascript"
+        src= "app/controller/sdl/RCModulesController.js"></script>
 <script type="text/javascript" src="app/controller/PhoneController.js"></script>
 <script type="text/javascript"
         src="app/controller/NavigationController.js"></script>
@@ -140,6 +145,8 @@
 <script type="text/javascript" src="app/controller/InfoController.js"></script>
 <script type="text/javascript"
         src="app/controller/SettingsController.js"></script>
+<script type="text/javascript"
+        src="app/controller/VehicleModuleCoverageController.js"></script>
 
 <script type="text/javascript"
         src="app/controller/sdl/Abstract/Controller.js"></script>
