Initial HMI PTU implementation

--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
         src="app/view/sdl/tbtClientStateView.js"></script>
 <script type="text/javascript" src="app/view/sdl/driverDistraction.js"></script>
 <script type="text/javascript" src="app/view/sdl/ExitAppView.js"></script>
+<script type="text/javascript" src="app/view/sdl/PolicyUpdateModePopUp.js"></script>
 <script type="text/javascript" src="app/view/sdl/PrimaryDevice.js"></script>
 <script type="text/javascript" src="app/view/sdl/SystemRequestView.js"></script>
 <script type="text/javascript" src="app/view/sdl/addWidgetPopUp.js"></script>
